[package]
name = "luhlog"
edition = "2021"
version = "0.0.4"
authors = ["cali zoots <calizoots@gmail.com>"]
description = "A horrible Rust logging library"
license = "GPL-3.0-or-later"
repository = "https://github.com/calizoots/luhlog"

[features]
default = []
color = []

[dependencies]
chrono = { version = "0.4" }
luhcore = { version = "0.0.1" }